# openvmm

./: .clippy.toml  .flowey.toml  .gdbinit  .git-blame-ignore-revs  .gitattributes  .gitignore  .rustfmt.toml  CONTRIBUTE.MD  Cargo.toml  README.md  SUPPORT.md  clippy.toml  codeql3000.yml  rust-toolchain.toml  rustfmt.toml
Guide/mdbook-openvmm-shim/: Cargo.toml  README.md
Guide/mdbook-openvmm-shim/src/: custom_preprocessors.rs  main.rs
flowey/flowey/: Cargo.toml
flowey/flowey/src/: lib.rs
flowey/flowey_cli/: Cargo.toml
flowey/flowey_cli/src/: lib.rs
flowey/flowey_core/: Cargo.toml
flowey/flowey_core/src/: lib.rs  node.rs  patch.rs  pipeline.rs  reexports.rs  util.rs
flowey/flowey_hvlite/: Cargo.toml
flowey/flowey_hvlite/src/: lib.rs  main.rs
flowey/flowey_lib_common/: Cargo.toml
flowey/flowey_lib_common/src/: ado_task_azure_key_vault.rs  ado_task_npm_authenticate.rs  ado_task_nuget_authenticate.rs  ado_task_nuget_tool_installer.rs  ado_task_publish_test_results.rs  cache.rs  cfg_cargo_common_flags.rs  cfg_persistent_dir_cargo_install.rs  check_needs_relaunch.rs  copy_to_artifact_dir.rs  download_azcopy.rs  download_cargo_fuzz.rs  download_cargo_nextest.rs  download_gh_artifact.rs  download_gh_cli.rs  download_gh_release.rs  download_mdbook.rs  download_mdbook_admonish.rs  download_mdbook_mermaid.rs  download_nuget_exe.rs  download_protoc.rs  gen_cargo_nextest_run_cmd.rs  gh_download_azure_key_vault_secret.rs  gh_task_azure_login.rs  gh_workflow_id.rs  git_checkout.rs  git_merge_commit.rs  install_apt_pkg.rs  install_azure_cli.rs  install_cargo_nextest.rs  install_dist_pkg.rs  install_git.rs  install_nodejs.rs  install_nuget_azure_credential_provider.rs  install_rust.rs  junit_publish_test_results.rs  lib.rs  nuget_install_package.rs  publish_test_results.rs  run_cargo_build.rs  (+5 more)
flowey/flowey_lib_hvlite/: Cargo.toml
flowey/flowey_lib_hvlite/src/: artifact_guest_test_uefi.rs  artifact_guide.rs  artifact_hypestv.rs  artifact_igvmfilegen.rs  artifact_nextest_unit_tests_archive.rs  artifact_nextest_vmm_tests_archive.rs  artifact_ohcldiag_dev.rs  artifact_openhcl_boot.rs  artifact_openhcl_igvm_from_recipe.rs  artifact_openhcl_igvm_from_recipe_extras.rs  artifact_openvmm.rs  artifact_openvmm_hcl_sizecheck.rs  artifact_pipette.rs  artifact_rustdoc.rs  artifact_vmgs_lib.rs  artifact_vmgstool.rs  build_and_test_vmgs_lib.rs  build_guest_test_uefi.rs  build_guide.rs  build_hypestv.rs  build_igvmfilegen.rs  build_nextest_unit_tests.rs  build_nextest_vmm_tests.rs  build_ohcldiag_dev.rs  build_openhcl_boot.rs  build_openhcl_igvm_from_recipe.rs  build_openhcl_initrd.rs  build_openvmm.rs  build_openvmm_hcl.rs  build_pipette.rs  build_rustdoc.rs  build_sidecar.rs  build_tmk_vmm.rs  build_tmks.rs  build_vmfirmwareigvm_dll.rs  build_vmgstool.rs  build_xtask.rs  cfg_openvmm_magicpath.rs  download_lxutil.rs  download_openhcl_kernel_package.rs  (+24 more)
hvlite/membacking/: Cargo.toml
hvlite/membacking/src/: partition_mapper.rs
openhcl/azure_profiler_proto/: Cargo.toml  build.rs
openhcl/azure_profiler_proto/src/: lib.rs  profile.proto
openhcl/bootloader_fdt_parser/: Cargo.toml
openhcl/bootloader_fdt_parser/src/: lib.rs
openhcl/build_info/: Cargo.toml
openhcl/build_info/src/: lib.rs
openhcl/diag_client/: Cargo.toml
openhcl/diag_client/src/: kmsg_stream.rs  lib.rs
openhcl/diag_proto/: Cargo.toml  build.rs
openhcl/diag_proto/src/: diag.proto  lib.rs
openhcl/diag_server/: Cargo.toml
openhcl/diag_server/src/: diag_service.rs  lib.rs  new_pty.rs
openhcl/fixed_pool_alloc/: Cargo.toml
openhcl/fixed_pool_alloc/src/: lib.rs  mapped_dma.rs
openhcl/get_lower_vtl/: Cargo.toml
openhcl/get_lower_vtl/src/: lib.rs
openhcl/hcl/: Cargo.toml
openhcl/hcl/src/: ioctl.rs  lib.rs  mapped_page.rs  protocol.rs  stats.rs  vmbus.rs  vmsa.rs
openhcl/hcl_mapper/: Cargo.toml
openhcl/hcl_mapper/src/: lib.rs
openhcl/host_fdt_parser/: Cargo.toml
openhcl/host_fdt_parser/src/: lib.rs
openhcl/lower_vtl_permissions_guard/: Cargo.toml
openhcl/lower_vtl_permissions_guard/src/: device_dma.rs  lib.rs
openhcl/minimal_rt/: Cargo.toml  aarch64-config.toml  aarch64-minimal_rt-none.json  build.rs  x86_64-config.toml
openhcl/minimal_rt/src/: enlightened_panic.rs  lib.rs  reftime.rs  reloc.rs  rt.rs
openhcl/ohcldiag-dev/: Cargo.toml
openhcl/ohcldiag-dev/src/: completions.rs  main.rs
openhcl/openhcl_attestation_protocol/: Cargo.toml
openhcl/openhcl_attestation_protocol/src/: lib.rs  vmgs.rs
openhcl/openhcl_boot/: Cargo.toml  build.rs
openhcl/openhcl_boot/src/: boot_logger.rs  cmdline.rs  dt.rs  hypercall.rs  main.rs  rt.rs  sidecar.rs  (+1 more)
openhcl/openhcl_dma_manager/: Cargo.toml
petri/: Cargo.toml
petri/guest-bootstrap/: README.md  imc.hiv  network-config  user-data
petri/logview/: common.js  index.html  inspect.html  test.html
petri/make_imc_hive/: Cargo.toml
petri/petri-tool/: Cargo.toml
petri/petri_artifacts_common/: Cargo.toml
petri/petri_artifacts_core/: Cargo.toml
petri/pipette/: Cargo.toml  shutdown.wprp
petri/pipette_client/: Cargo.toml
petri/pipette_protocol/: Cargo.toml
petri/src/: disk_image.rs  lib.rs  linux_direct_serial_agent.rs  openhcl_diag.rs  test.rs  tracing.rs  worker.rs
vmm_core/: Cargo.toml
vmm_core/src/: acpi_builder.rs  device_builder.rs  input_distributor.rs  lib.rs  partition_unit.rs  platform_resolvers.rs  synic.rs  vmbus_unit.rs  vmotherboard_adapter.rs  vmtime_unit.rs
vmm_core/state_unit/: Cargo.toml
vmm_core/virt/: Cargo.toml
vmm_core/virt_hvf/: Cargo.toml
vmm_core/virt_kvm/: Cargo.toml
vmm_core/virt_mshv/: Cargo.toml
vmm_core/virt_support_aarch64emu/: Cargo.toml
vmm_core/virt_support_apic/: Cargo.toml
vmm_core/virt_support_gic/: Cargo.toml
vmm_core/virt_support_x86emu/: Cargo.toml
vmm_core/virt_whp/: Cargo.toml
vmm_core/vm_loader/: Cargo.toml
vmm_core/vm_manifest_builder/: Cargo.toml
vmm_core/vmm_core_defs/: Cargo.toml
vmm_core/vmotherboard/: Cargo.toml
xsync/: Cargo.toml
xsync/xsync/: Cargo.toml
xtask/: Cargo.toml
xtask/src/: fs_helpers.rs  main.rs
xtask/xtask_fuzz/: Cargo.toml
(+2160 files in other folders)
