# Copyright (c) Microsoft Corporation.
# Licensed under the MIT License.

[package]
name = "mdbook-openvmm-shim"
edition = "2021"

[dependencies]


[workspace.lints]

[lints]
workspace = true

[package.metadata.xtask.house-rules]
# emits a binary, where kebab-case is more natural
allow-dash-in-name = true
# no deps on any remotely recent Rust features. avoids the need to keep this
# rust-version in-sync with the main repo's
allow-missing-rust-version = true
