# Copyright (c) Microsoft Corporation.
# Licensed under the MIT License.

[package]
name = "flowey_cli"
edition.workspace = true
rust-version.workspace = true

[dependencies]
flowey_core.workspace = true
schema_ado_yaml.workspace = true

ci_logger.workspace = true

anyhow.workspace = true
clap = { workspace = true, features = ["derive", "env"] }
fs-err.workspace = true
log.workspace = true
parking_lot.workspace = true
petgraph.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde_yaml.workspace = true
toml_edit = { workspace = true, features = ["serde"] }
xshell.workspace = true

[lints]
workspace = true
