# Copyright (C) Microsoft Corporation. All rights reserved.

[package]
name = "flowey_core"
edition = "2021"
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
fs-err.workspace = true
linkme.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde_yaml.workspace = true

[lints]
workspace = true
