# Copyright (c) Microsoft Corporation.
# Licensed under the MIT License.

[package]
name = "flowey_core"
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
fs-err.workspace = true
linkme.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde_yaml.workspace = true

[lints]
workspace = true
