# Copyright (c) Microsoft Corporation.
# Licensed under the MIT License.

[package]
name = "flowey_lib_common"
edition.workspace = true
rust-version.workspace = true

[dependencies]
flowey.workspace = true

anyhow.workspace = true
dirs.workspace = true
fs-err.workspace = true
home.workspace = true
log.workspace = true
rlimit.workspace = true
rustc-hash.workspace = true
serde.workspace = true
target-lexicon = { workspace = true, features = ["serde_support"] }
toml_edit.workspace = true
which.workspace = true
xshell.workspace = true

[lints]
workspace = true

[package.metadata.xtask.unused-deps]
# Pulled in via prelude
ignored = ["serde"]
