# Copyright (c) Microsoft Corporation.
# Licensed under the MIT License.

[package]
name = "flowey_lib_hvlite"
edition.workspace = true
rust-version.workspace = true

[dependencies]
flowey.workspace = true
flowey_lib_common.workspace = true

vmm_test_images = { workspace = true, features = ["serde"] }
igvmfilegen_config.workspace = true

anyhow.workspace = true
fs-err.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
target-lexicon = { workspace = true, features = ["serde_support"] }
which.workspace = true
xshell.workspace = true

[lints]
workspace = true
