# Copyright (C) Microsoft Corporation. All rights reserved.

[package]
name = "membacking"
edition = "2021"

[dependencies]
hvdef.workspace = true
guestmem.workspace = true
vmcore.workspace = true
virt.workspace = true
memory_range = { workspace = true, features = ["mesh"] }
vm_topology = { workspace = true, features = ["mesh"] }

inspect = { workspace = true, features = ["defer"] }
mesh.workspace = true
pal_async.workspace = true
sparse_mmap.workspace = true

futures.workspace = true
getrandom.workspace = true
parking_lot.workspace = true
slab.workspace = true
thiserror.workspace = true
tracing.workspace = true

[lints]
workspace = true
